fix: flex-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,9 @@
     height: 650px;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap
+    flex-wrap: wrap;
+   
+
 }
 
 .img {
